launchpad-buildd (156) UNRELEASED; urgency=medium

  * Remove useless cwd argument passed to subprocess.check_call from
    Chroot.run.
  * Replace shell_escape function with shlex.quote (Python 3) or pipes.quote
    (Python 2).
  * Fix handling of null/empty-domain case in generate_pots.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 09 Nov 2017 12:08:42 +0000

launchpad-buildd (155) xenial; urgency=medium

  * Refactor lpbuildd.pottery.intltool to avoid calling chdir.
  * Merge TranslationTemplatesBuildState.{INSTALL,GENERATE} into a single
    state.
  * Convert generate-translation-templates to the new Operation framework.
  * Use Python 3-style print functions.
  * Make urllib imports Python 3-compatible.
  * Make xmlrpc imports Python 3-compatible.
  * Make configparser imports Python 3-compatible.
  * Handle dict API changes in Python 3.
  * Raise more useful exceptions when LXD.copy_in or LXD.copy_out fail.
  * Make Backend.run implementations print command output if echo and
    get_output are both true.
  * Make Backend.is_package_available handle the case where the requested
    package name is purely virtual.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 02 Nov 2017 11:42:24 +0000

launchpad-buildd (154) xenial; urgency=medium

  * The previous patch was labouring under mistaken assumptions: it's
    actually the mounted-dev Upstart job that we race with in trusty
    containers, so neuter that instead.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 19 Oct 2017 10:29:30 +0100

launchpad-buildd (153) xenial; urgency=medium

  * Defend against racing with udev to create loop devices in trusty
    containers (LP: #1723216).

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 18 Oct 2017 07:57:32 +0100

launchpad-buildd (152) xenial; urgency=medium

  [ Colin Watson ]
  * Accept a "debug" entry in livefs arguments, which enables detailed
    live-build debugging.
  * Set SHELL=/bin/sh in snap builds, since it was previously passed through